--- a/index.ipynb
+++ b/index.ipynb
@@ -177,13 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "title = \"Ceo\" # 'CEO'"
+    "title = \"Ceo\" # 'CEO'\n",
+    "title."
    ]
   },
   {
