Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,12 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "title = \"Ceo\" # 'CEO'\n",
-    "title."
+    "title.upper()"
    ]
   },
   {
