--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "email_a\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
