Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
    },
    "outputs": [],
    "source": [
-    "email_a\"art.vandelay@vandelay.co\" # False"
+    "email_address = \"art.vandelay@vandelay.co\" # False\n",
+    "email"
    ]
   },
   {
