--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "email_address = \"art.vandelay@vandelay.co\" # False\n",
-    "email"
+    "email_address.endswith('')"
    ]
   },
   {
