Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "email_address = \"art.vandelay@vandelay.co\" # False\n",
-    "email_address.endswith('')"
+    "email_address.endswith(\"\".com\")"
    ]
   },
   {
