Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,14 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "email_address = \"art.vandelay@vandelay.co\" # False\n",
-    "email_address.endswith(\"\".com\")"
+    "email_address.endswith(\".com\")"
    ]
   },
   {
