--- a/index.ipynb
+++ b/index.ipynb
@@ -233,15 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "website = "
+    "website = \"www.\"+website"
    ]
   },
   {
