Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,14 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "website = \"www.\"+website"
+    "website = \"www.\"+website\n",
+    "website"
    ]
   },
   {
