Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,11 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
     "website = \"www.\"+website\n",
@@ -266,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "\"7285553334\"[:3] # 728"
    ]
   },
   {
